fix: mobile layout issues

--- a/style.css
+++ b/style.css
@@ -1,6 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=delete');
+@media (max-width: 600px) {
+    li {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .actions {
+        margin-left: 0;
+    }
+}
 :root{
     --bg-dark: hsl(0, 0%, 85%);
     --bg: hsl(0,0%,95%);
@@ -32,7 +42,7 @@
 body {
     background-color: var(--bg-dark);
     color: var(--text);
-    padding: 2rem;
+    padding: 10px;
     max-width: 1100px;
     margin: 0 auto;
 }
@@ -58,6 +68,7 @@ input[type="text"] {
 }
 .input-group {
     display: flex;
+    flex-wrap: wrap;
     gap: 8px;
     margin: 10px 0;
     
@@ -109,6 +120,7 @@ li:hover {
 }
 li span {
     flex: 1;
+    word-break: break-word;
 }
 .actions {
     background: transparent;
@@ -116,6 +128,7 @@ li span {
     display: flex;
     gap: 8px;
     padding: 0;
+    flex-wrap: wrap;
 }
 .btn-del:hover{
     background-color: #EF4444;
